Fix vertical alignment of macro buttons.

--- a/resources/public/css/screen.css
+++ b/resources/public/css/screen.css
@@ -35,3 +35,6 @@ body {
 .nowrap {
     white-space: nowrap;
 }
+.vertical-middle {
+    vertical-align: middle !important;
+}
